Features: Higher testing coverage, lines and branch