@@ -17,7 +17,6 @@ import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.*;
@@ -27,7 +26,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 @WebMvcTest(UserController.class)
 @AutoConfigureMockMvc(addFilters = false)
-public class UserControllerTest {
+class UserControllerTest {
 
     @MockBean
     private UserService userService;
@@ -41,23 +40,28 @@ public class UserControllerTest {
     @Autowired
     private ObjectMapper objectMapper;
 
-    private UserRegisterRequest userRegisterRequest;
-    private UserLoginRequest userLoginRequest;
+    private UserRegisterRequest registerRequest;
+    private UserLoginRequest loginRequest;
     private UserResponse userResponse;
-    private User mockUser;
+    private User user;
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
 
-        userRegisterRequest = new UserRegisterRequest();
-        userRegisterRequest.setEmail("test@example.com");
-        userRegisterRequest.setPassword("Password@123");
-        userRegisterRequest.setFullName("Test User");
-        userRegisterRequest.setDepartment("IT");
+        registerRequest = new UserRegisterRequest();
+        registerRequest.setEmail("test@example.com");
+        registerRequest.setPassword("Password@123");
+        registerRequest.setFullName("Test User");
 
-        userLoginRequest = new UserLoginRequest();
-        userLoginRequest.setEmail("test@example.com");
-        userLoginRequest.setPassword("Password@123");
+        loginRequest = new UserLoginRequest();
+        loginRequest.setEmail("test@example.com");
+        loginRequest.setPassword("Password@123");
+
+        user = new User();
+        user.setId(1L);
+        user.setEmail("test@example.com");
+        user.setFullName("Test User");
+        user.setRole(UserRole.CLIENT);
 
         userResponse = new UserResponse();
         userResponse.setId(1L);
@@ -65,88 +69,124 @@ public class UserControllerTest {
         userResponse.setFullName("Test User");
         userResponse.setRole(UserRole.CLIENT.toString());
         userResponse.setStatus(UserStatus.ACTIVE.toString());
-
-        mockUser = new User();
-        mockUser.setId(1L);
-        mockUser.setEmail("test@example.com");
-        mockUser.setFullName("Test User");
-        mockUser.setRole(UserRole.CLIENT);
     }
 
     // ---------------- REGISTER ----------------
 
     @Test
-    public void testRegisterUserSuccess() throws Exception {
-
-        when(userService.registerUserReturnEntity(any(UserRegisterRequest.class)))
-                .thenReturn(mockUser);
-
-        when(jwtTokenProvider.generateToken(any(User.class)))
-                .thenReturn("mock-jwt-token");
+    void register_success() throws Exception {
+        when(userService.registerUserReturnEntity(any())).thenReturn(user);
+        when(jwtTokenProvider.generateToken(any())).thenReturn("token");
 
         mockMvc.perform(post("/api/auth/register")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(userRegisterRequest)))
+                        .content(objectMapper.writeValueAsString(registerRequest)))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.success").value(true))
-                .andExpect(jsonPath("$.data.email").value("test@example.com"));
+                .andExpect(jsonPath("$.data.token").value("token"));
+    }
+
+    @Test
+    void register_failure_illegalArgument() throws Exception {
+        when(userService.registerUserReturnEntity(any()))
+                .thenThrow(new IllegalArgumentException("Email exists"));
+
+        mockMvc.perform(post("/api/auth/register")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(registerRequest)))
+                .andExpect(status().isBadRequest());
     }
 
     // ---------------- LOGIN ----------------
 
     @Test
-    public void testLoginUserSuccess() throws Exception {
-
-        when(userService.loginUserReturnEntity(any(UserLoginRequest.class)))
-                .thenReturn(mockUser);
-
-        when(jwtTokenProvider.generateToken(any(User.class)))
-                .thenReturn("mock-jwt-token");
+    void login_success() throws Exception {
+        when(userService.loginUserReturnEntity(any())).thenReturn(user);
+        when(jwtTokenProvider.generateToken(any())).thenReturn("token");
 
         mockMvc.perform(post("/api/auth/login")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(userLoginRequest)))
+                        .content(objectMapper.writeValueAsString(loginRequest)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.success").value(true))
-                .andExpect(jsonPath("$.data.token").value("mock-jwt-token"));
+                .andExpect(jsonPath("$.data.token").value("token"));
     }
 
-    // ---------------- GET ALL USERS ----------------
+    @Test
+    void login_failure() throws Exception {
+        when(userService.loginUserReturnEntity(any()))
+                .thenThrow(new IllegalArgumentException("Invalid"));
+
+        mockMvc.perform(post("/api/auth/login")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(loginRequest)))
+                .andExpect(status().isUnauthorized());
+    }
+
+    // ---------------- ME ----------------
+
+    @Test
+    @WithMockUser
+    void getCurrentUser_success() throws Exception {
+        when(jwtTokenProvider.getUserIdFromToken(anyString())).thenReturn(1L);
+        when(userService.getUserById(1L)).thenReturn(userResponse);
+
+        mockMvc.perform(get("/api/auth/me")
+                        .header("Authorization", "Bearer token"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.data.email").value("test@example.com"));
+    }
+
+    @Test
+    @WithMockUser
+    void getCurrentUser_failure() throws Exception {
+        when(jwtTokenProvider.getUserIdFromToken(anyString()))
+                .thenThrow(new RuntimeException("bad token"));
+
+        mockMvc.perform(get("/api/auth/me")
+                        .header("Authorization", "Bearer token"))
+                .andExpect(status().isUnauthorized());
+    }
+
+    // ---------------- USERS LIST ----------------
 
     @Test
     @WithMockUser(roles = "ADMIN")
-    public void testGetAllUsersSuccess() throws Exception {
-
-        List<UserResponse> users = Arrays.asList(userResponse);
-
-        when(userService.getAllUsers()).thenReturn(users);
+    void getAllUsers_success() throws Exception {
+        when(userService.getAllUsers()).thenReturn(List.of(userResponse));
 
         mockMvc.perform(get("/api/auth/users"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.data.length()").value(1));
     }
 
+    @Test
+    @WithMockUser(roles = "ADMIN")
+    void getAllUsers_failure() throws Exception {
+        when(userService.getAllUsers())
+                .thenThrow(new RuntimeException("db error"));
+
+        mockMvc.perform(get("/api/auth/users"))
+                .andExpect(status().isInternalServerError());
+    }
+
     // ---------------- GET BY ID ----------------
 
     @Test
     @WithMockUser
-    public void testGetUserByIdSuccess() throws Exception {
-
+    void getUserById_success() throws Exception {
         when(userService.getUserById(1L)).thenReturn(userResponse);
 
         mockMvc.perform(get("/api/auth/users/1"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data.email").value("test@example.com"));
+                .andExpect(status().isOk());
     }
 
     @Test
     @WithMockUser
-    public void testGetUserByIdNotFound() throws Exception {
+    void getUserById_notFound() throws Exception {
+        when(userService.getUserById(99L))
+                .thenThrow(new IllegalArgumentException("not found"));
 
-        when(userService.getUserById(999L))
-                .thenThrow(new IllegalArgumentException("User not found"));
-
-        mockMvc.perform(get("/api/auth/users/999"))
+        mockMvc.perform(get("/api/auth/users/99"))
                 .andExpect(status().isNotFound());
     }
 
@@ -154,47 +194,128 @@ public class UserControllerTest {
 
     @Test
     @WithMockUser
-    public void testUpdateUserSuccess() throws Exception {
+    void updateUser_success() throws Exception {
+        UserUpdateRequest req = new UserUpdateRequest();
+        req.setEmail("updated@test.com");
 
-        UserUpdateRequest updateRequest = new UserUpdateRequest();
-        updateRequest.setEmail("test@example.com");
-
-        when(userService.updateUser(eq(1L), any(UserUpdateRequest.class)))
-                .thenReturn(userResponse);
+        when(userService.updateUser(eq(1L), any())).thenReturn(userResponse);
 
         mockMvc.perform(put("/api/auth/users/1")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(updateRequest)))
+                        .content(objectMapper.writeValueAsString(req)))
                 .andExpect(status().isOk());
     }
 
-    // ---------------- DEACTIVATE ----------------
-
     @Test
-    @WithMockUser(roles = "ADMIN")
-    public void testDeactivateUserSuccess() throws Exception {
+    @WithMockUser
+    void updateUser_failure() throws Exception {
+        when(userService.updateUser(eq(1L), any()))
+                .thenThrow(new IllegalArgumentException("bad update"));
 
-        userResponse.setStatus(UserStatus.INACTIVE.toString());
-
-        when(userService.deactivateUser(1L)).thenReturn(userResponse);
-
-        mockMvc.perform(put("/api/auth/users/1/deactivate"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data.status").value(UserStatus.INACTIVE.toString()));
+        mockMvc.perform(put("/api/auth/users/1")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content("{}"))
+                .andExpect(status().isBadRequest());
     }
 
-    // ---------------- REACTIVATE ----------------
+    // ---------------- DELETE ----------------
 
     @Test
     @WithMockUser(roles = "ADMIN")
-    public void testReactivateUserSuccess() throws Exception {
+    void deleteUser_success() throws Exception {
+        mockMvc.perform(delete("/api/auth/users/1"))
+                .andExpect(status().isOk());
+    }
 
-        userResponse.setStatus(UserStatus.ACTIVE.toString());
+    @Test
+    @WithMockUser(roles = "ADMIN")
+    void deleteUser_failure() throws Exception {
+        org.mockito.Mockito.doThrow(new IllegalArgumentException("fail"))
+                .when(userService).softDeleteUser(1L);
 
-        when(userService.reactivateUser(1L)).thenReturn(userResponse);
+        mockMvc.perform(delete("/api/auth/users/1"))
+                .andExpect(status().isBadRequest());
+    }
 
-        mockMvc.perform(put("/api/auth/users/1/reactivate"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data.status").value(UserStatus.ACTIVE.toString()));
+    // ---------------- RESTORE ----------------
+
+    @Test
+    @WithMockUser(roles = "ADMIN")
+    void restoreUser_success() throws Exception {
+        when(userService.restoreUser(1L)).thenReturn(userResponse);
+
+        mockMvc.perform(post("/api/auth/users/1/restore"))
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    @WithMockUser(roles = "ADMIN")
+    void restoreUser_failure() throws Exception {
+        when(userService.restoreUser(1L))
+                .thenThrow(new IllegalArgumentException("fail"));
+
+        mockMvc.perform(post("/api/auth/users/1/restore"))
+                .andExpect(status().isBadRequest());
+    }
+
+    // ---------------- ROLE UPDATE ----------------
+
+    @Test
+    @WithMockUser(roles = "ADMIN")
+    void updateRole_success() throws Exception {
+        UserRoleRequest req = new UserRoleRequest();
+        req.setRole("ADMIN");
+
+        when(userService.updateUserRole(eq(1L), anyString()))
+                .thenReturn(userResponse);
+
+        mockMvc.perform(put("/api/auth/users/1/role")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(req)))
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    @WithMockUser(roles = "ADMIN")
+    void updateRole_failure() throws Exception {
+        UserRoleRequest req = new UserRoleRequest();
+        req.setRole("INVALID");
+
+        when(userService.updateUserRole(eq(1L), anyString()))
+                .thenThrow(new IllegalArgumentException("bad role"));
+
+        mockMvc.perform(put("/api/auth/users/1/role")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(req)))
+                .andExpect(status().isBadRequest());
+    }
+
+    // ---------------- REGISTER AGENT ----------------
+
+    @Test
+    @WithMockUser(roles = "ADMIN")
+    void registerAgent_success() throws Exception {
+        RegisterAgentRequest req = new RegisterAgentRequest();
+        req.setEmail("agent@test.com");
+        req.setFullName("Agent");
+
+        when(userService.registerSupportAgent(any())).thenReturn(userResponse);
+
+        mockMvc.perform(post("/api/auth/register-agent")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(req)))
+                .andExpect(status().isCreated());
+    }
+
+    @Test
+    @WithMockUser(roles = "ADMIN")
+    void registerAgent_failure() throws Exception {
+        when(userService.registerSupportAgent(any()))
+                .thenThrow(new IllegalArgumentException("fail"));
+
+        mockMvc.perform(post("/api/auth/register-agent")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content("{}"))
+                .andExpect(status().isBadRequest());
     }
 }
